Reduced flicker on puzzle load

--- a/embed.html
+++ b/embed.html
@@ -163,6 +163,8 @@ canvas {
                     camera.position = board.position;
                     camera.fov = board.getFov();
                     board.activate();
+                    mainLayer.refresh();
+                    mainLayer.draw();
                 }
                 return board;
             }
