--- a/gap.html
+++ b/gap.html
@@ -189,6 +189,7 @@ canvas {
                         nextButton.setShow(false);
                         showNextButton = false;
                         press = false;
+                        click = false;
                     }
                 },
 
