--- a/embed.html
+++ b/embed.html
@@ -22,8 +22,8 @@ canvas {
     <html>
     <head>
         <meta charset="utf-8">
-
         <title>District</title>
+        
         <script language="javascript" src="./js/layer.js" type="text/javascript"></script>
         <script language="javascript" src="./js/values.js" type="text/javascript"></script>
         <script language="javascript" src="./js/input.js" type="text/javascript"></script>
@@ -69,6 +69,7 @@ canvas {
             context.textBaseline="middle";
 
             var updateListeners = [];
+            var animationListeners = [];
 
             var borderSize = 1;
 
@@ -127,6 +128,7 @@ canvas {
                     }
                     else {
                         //canvasElement.style.display = "block";
+                        completeAnimation();
                         window.requestAnimationFrame(step);
                         timerId = setInterval(function() {
                           update();
@@ -145,6 +147,8 @@ canvas {
 
             window.invertBoard = function(){
                 board.invert();
+                mainLayer.refresh();
+                mainLayer.draw();
             }
 
             window.getBoard = function(){
@@ -153,6 +157,9 @@ canvas {
 
             window.completeAnimation = function(){
                 board.completeAnimation();
+                for (var i = 0; i < animationListeners.length; i++) {
+                    animationListeners[i].completeAnimation();
+                }
             }
 
             window.setBoard = function(BOARD){
@@ -181,6 +188,10 @@ canvas {
 
             window.getBoardSpec = function(){
                 return board.getSpec();
+            }
+
+            window.getFencePairs = function(){
+                return board.getFencePairs();
             }
 
             function start() {
