--- a/index.html
+++ b/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <meta charset="utf-8">
         <title>District</title>
+
+        <!-- Google Analytics -->
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-98651852-1', 'auto', 'districtTracker');
+        ga('send', 'pageview');
+        </script>
+        <!-- End Google Analytics -->
+
         <script src="http://code.jquery.com/jquery.min.js"></script>
 
         <link rel="icon" type="image/png" href="/favicon.png"/>
         <link rel="stylesheet" href="./css/district.css">
         <link rel="stylesheet" href="/css/main.css">
-
-        <meta charset="utf-8">
     </head>
     <body>
         <div id="nav-container"></div>
@@ -20,12 +32,6 @@
 
         <div class="deck" id="deck">
         </div>
-
-        <!--
-        <div class="advance" id="advance" onclick="advance()">
-            <a href="javascript:void(0)">Next...</a>
-        </div>
-        -->
 
         <script type="text/javascript">
             var slides = [];
@@ -70,7 +76,7 @@
 
                 var title = document.createElement('div');
                 title.className = "title";
-                title.innerHTML = spec.title;
+                title.innerHTML = "<b>"+spec.title+"</b>";
                 words.appendChild(title);
 
                 var description = document.createElement('div');
@@ -116,6 +122,33 @@
                 return slide;
             }
 
+            appendFinalSlide = function(spec){
+                var {slide, words, title, description} = createBasicSlide(spec);
+
+                var bullets = document.createElement('div');
+                bullets.className = "bullets";
+                words.appendChild(bullets);
+
+                for (var i = 0; i < spec.bullets.length; i++) {
+                    let bullet = document.createElement('div');
+                    bullet.innerHTML = spec.bullets[i];
+                    bullet.className = "bullet";
+                    bullets.appendChild(bullet);
+                }
+
+                var closer = document.createElement('div');
+                closer.className = "closer";
+                closer.innerHTML = spec.closer;
+                words.appendChild(closer);
+
+                var credits = document.createElement('div');
+                credits.className = "credits";
+                credits.innerHTML = spec.credits;
+                words.appendChild(credits);
+
+                return slide;
+            }
+
             appendGapSlide = function(spec){
                 var {slide, words, title, description} = createBasicSlide(spec);
 
@@ -138,6 +171,8 @@
             appendPuzzleSlide = function(spec){
                 var {slide, words, title, description} = createBasicSlide(spec);
 
+                title.innerHTML += "&nbsp;&nbsp;&nbsp;&nbsp;"+(puzzleSlides.length+1)+"/10";
+
                 var puzzle = document.createElement('div');
                 puzzle.className = "puzzle";
                 slide.appendChild(puzzle);
@@ -150,8 +185,8 @@
 
                 puzzleFrame.addEventListener('load', function(){
                     if (!puzzleFrames.includes(puzzleFrame)) {
-                        puzzleFrame.contentWindow.setBoardSpec(spec.board);
                         puzzleFrame.contentWindow.setCompletionCallback(advance);
+                        puzzleFrame.contentWindow.setBoardSpec(spec.board);
 
                         puzzleContainers.push(puzzle);
                         puzzleFrames.push(puzzleFrame);
@@ -261,7 +296,7 @@
                 {
                     generator: appendPuzzleSlide,
                     title: "Seeds of Discontent",
-                    description: "<p>The kingdom is evenly split on color.</p><p>Yet somehow, the floor is still mostly WINTEAM. Much of the LOSETEAM population feels like their <b>votes didn't count</b>.</p>",
+                    description: "<p>The kingdom is evenly split on color.</p><p>Yet somehow, the floor is still mostly WINTEAM. It's almost as if many LOSETEAM <b>votes didn't count.</b></p>",
                     board: {
                         groupCount: 4,
                         goalScore: 2,
@@ -306,15 +341,17 @@
                     },
                     muteGap: true,
                 },
+                /*
                 {
                     generator: appendGapSlide,
                     title: "God Becomes Concerned.",
-                    description: "<p>Worried about WINTEAM's disproportionate power, God starts tracking the difference between the <b>vote percentage</b> and <b>floor percentage</b> for each color.</p><p>\"I shall call this metric... the <b>Proportionality Gap</b>\" says God.</p>",
+                    description: "<p>God is worried about the big difference between WINTEAM's <b>proportion of voters</b> and <b>proportion of representatives</b>. God decides to measure this difference to see how unfair these elections are.<p>\"I shall call this metric... the <b>Proportionality Gap</b>\" says God.</p>",
                 },
+                */
                 {
                     generator: appendPuzzleSlide,
-                    title: "Mind the Gap",
-                    description: "<p>In the next election, God is shocked to find a Proportionality Gap of <b>27%</b>.</p><p>Clearly, this system gives far too much power to whoever draws the districts.</p>",
+                    title: "God Becomes Concerned",
+                    description: "<p>After the next election, WINTEAM has 40% of the voters, 67% of the representatives, and <b>100% of the power.</b></p><p>This worries God.</p>",
                     board: {
                         groupCount: 6,
                         goalScore: 2,
@@ -331,7 +368,7 @@
                 {
                     generator: appendPuzzleSlide,
                     title: "God Intervenes",
-                    description: "<p>God checks out a library book on Voting Systems, and comes across an idea called <b>Proportional Representation</b>.</p><p>God decides to try using <b>half as many districts</b> with <b>two winners each</b>.</p><p>The Proportionality Gap drops dramatically.</p>",
+                    description: "<p>God checks out a library book on Voting Systems, and comes across an idea called <b>Proportional Representation</b>.</p><p>God decides to try using <b>half as many districts</b> with <b>two winners each</b>.</p><p>WINTEAM is no longer able to engineer an undeserved victory.</p>",
                     board: {
                         groupCount: 3,
                         repCount: 2,
@@ -342,12 +379,28 @@
                             [0, 0, 0, 1, 1, 1],
                             [0, 0, 0, 1, 1, 1],
                         ],
+                        fencePairs: [
+                            {a: 6, b: 7},
+                            {a: 7, b: 8},
+                            {a: 8, b: 14},
+                            {a: 14, b: 20},
+                            {a: 20, b: 26},
+                            {a: 26, b: 32},
+                            {a: 32, b: 38},
+                            {a: 3, b: 9},
+                            {a: 9, b: 15},
+                            {a: 15, b: 21},
+                            {a: 21, b: 27},
+                            {a: 27, b: 33},
+                            {a: 33, b: 34},
+                            {a: 34, b: 35},
+                        ],
                     },
                 },
                 {
                     generator: appendPuzzleSlide,
-                    title: "All is Well",
-                    description: "<p>Encouraged by this trend, God tries adding a third winner. The Proportionality Gap drops even further.</p><p>(You have reached the end of the known universe)</p>",
+                    title: "The End",
+                    description: "<p>God adds a third winner, and the election only gets more fair.</p><p>God concludes that single-winner elections are fundamentally unrepresentative. Unfortunately, the Carpet Kinddom Supreme Court is not convinced by this argument.</p><p>So God wonders aloud... <b>\"What can I do about this?\"</b></p>",
                     board: {
                         groupCount: 3,
                         repCount: 3,
@@ -358,7 +411,35 @@
                             [0, 0, 0, 1, 1, 1],
                             [0, 0, 0, 1, 1, 1],
                         ],
+                        fencePairs: [
+                            {a: 6, b: 7},
+                            {a: 7, b: 8},
+                            {a: 8, b: 14},
+                            {a: 14, b: 20},
+                            {a: 20, b: 26},
+                            {a: 26, b: 32},
+                            {a: 32, b: 38},
+                            {a: 3, b: 9},
+                            {a: 9, b: 15},
+                            {a: 15, b: 21},
+                            {a: 21, b: 27},
+                            {a: 27, b: 33},
+                            {a: 33, b: 34},
+                            {a: 34, b: 35},
+                        ],
                     },
+                },
+                {
+                    generator: appendFinalSlide,
+                    title: "What You Can Do About This",
+                    description: "",//"<p>If you care about this issue, here are some further steps you can take:</p>",
+                    bullets: [
+                        "&#8226; <b>Get Informed</b> and read up on <a href=\"http://election.princeton.edu/2016/11/24/a-lower-court-win-on-partisan-gerrymandering/\">Gerrymandering Metrics</a> and <a href=\"http://fairvote.org/proportional_representation_library\">Proportional Representation</a>",
+                        "&#8226; <b>Get Involved</b> with groups like <a href=\"http://www.fairvote.org/\">FairVote</a> and donate to groups like the <a href=\"https://secure.squarespace.com/commerce/donate?donatePageId=55f70a4ee4b080e8fac1d69e\">Fair Elections Project</a>",
+                        "&#8226; <b>Spread the Word</b> about these issues! Sharing this page on <a href=\"https://twitter.com/home?status=Here%20is%20a%20totally%20rad%20game%20about%20redistricting%20and%20representation%3A%20polytrope.com/district/\">Twitter</a> or <a href=\"https://www.facebook.com/sharer/sharer.php?u=polytrope.com/district/\">Facebook</a> is a good start.",
+                    ],
+                    closer: "Want to make, share, or embed your own District maps?<br><a href=\"http://polytrope.com/district/sandbox.html\">Use the Level Editor!</a>",
+                    credits: "<p>Special thanks to these<br>very patient people:</p><p>Amit Patel<br>Andy Matuschak<br>Lingxi Chenyang<br>Lucas Vieira<br>Nicky Case</p><p>And finally, thanks to you for playing!</p>",
                 },
             ];
 
@@ -408,8 +489,13 @@
                             console.log("Assigning spec %s on deactivation. Spec has %s fences", i, puzzleSpecs[i].fencePairs.length);
                         }
                     }
-                }
+                } 
                 activeSlide = targetSlide;
+            }
+
+            skip = function(){
+                
+                while (slideSpecs.length > 0) advance();
             }
 
             advance = function(){
@@ -421,13 +507,18 @@
                         behavior: "smooth",
                         block: "start",
                     });
-                    if (slideSpecs.length == 0) {
-                        document.getElementById("advance").style.visibility = "hidden";
-                    }
+
+                    ga('send', {
+                        hitType: 'event',
+                        eventCategory: 'Slide',
+                        eventAction: 'advance',
+                        eventLabel: 'slide'+(slides.length-1)
+                    });
                 }
             }
 
             advance();
+            skip();
 
         </script>
 
