--- a/sandbox.html
+++ b/sandbox.html
@@ -8,7 +8,7 @@
 
         <link rel="icon" type="image/png" href="/favicon.png"/>
         <link rel="stylesheet" href="/css/main.css">
-        <link rel="stylesheet" href="./css/district.css">
+        <link rel="stylesheet" href="./css/sandbox.css">
 
     </head>
     <body>
