--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <title>District</title>
 
         <!-- Google Analytics -->
-        <script>
+        <script><script>
         (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
         (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
         m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
         })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-        ga('create', 'UA-98651852-1', 'auto', 'districtTracker');
+        ga('create', 'UA-98651852-1', 'auto');
         ga('send', 'pageview');
         </script>
         <!-- End Google Analytics -->
@@ -400,7 +400,7 @@
                 {
                     generator: appendPuzzleSlide,
                     title: "The End",
-                    description: "<p>God adds a third winner, and the election only gets more fair.</p><p>God concludes that single-winner elections are fundamentally unrepresentative. Unfortunately, the Carpet Kinddom Supreme Court is not convinced by this argument.</p><p>So God wonders aloud... <b>\"What can I do about this?\"</b></p>",
+                    description: "<p>God adds a third winner, and the election only gets more fair.</p><p>God concludes that single-winner elections are fundamentally unrepresentative. Unfortunately, the Carpet Kingdom Supreme Court is not convinced by this argument.</p><p>So God wonders aloud... <b>\"What can I do about this?\"</b></p>",
                     board: {
                         groupCount: 3,
                         repCount: 3,
