--- a/index.html
+++ b/index.html
@@ -511,8 +511,8 @@
                     ga('send', {
                         hitType: 'event',
                         eventCategory: 'Slide',
-                        eventAction: 'advance',
-                        eventLabel: 'slide'+(slides.length-1)
+                        eventAction: '#'+(slides.length-1),
+                        eventLabel: 'advance'
                     });
                 }
             }
