--- a/sandbox.html
+++ b/sandbox.html
@@ -2,10 +2,19 @@
 <html>
     <head>
         <meta charset="utf-8">
-
         <title>District</title>
-        <script src="http://code.jquery.com/jquery.min.js"></script>
 
+        <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-98651852-1', 'auto');
+        ga('send', 'pageview');
+        </script>
+
+        <script src="http://code.jquery.com/jquery.min.js"></script>
         <link rel="icon" type="image/png" href="/favicon.png"/>
         <link rel="stylesheet" href="/css/main.css">
         <link rel="stylesheet" href="./css/sandbox.css">
@@ -243,8 +252,6 @@
                 if (url.includes("?")) url = url.slice(0, url.indexOf("?"));
                 url += board.getQueryString();
                 embedField.value = "<embed src=\""+url+"\" width=\"640px\" height=\"640px\" style=\"border:1px solid black\"></embed>";
-
-
             }
         </script>
 
@@ -266,7 +273,7 @@
                 board = frame.contentWindow.getBoard();
                 board.setRefreshQueryCallback(refreshToolbox);
                 refreshToolbox();
-                openToolbox();
+                if (!window.href.includes('?')) openToolbox();
             });
         </script>
 
