--- a/sandbox.html
+++ b/sandbox.html
@@ -14,6 +14,12 @@
         ga('send', 'pageview');
         </script>
 
+        <meta property="og:title" content="District Sandbox">
+        <meta property="og:description" content="Level Editor for District, a Game about Representation and Redistricting.">
+        <meta property="og:image" content="http://polytrope.com/district/res/thumbnail.png">
+        <meta property="og:url" content="http://polytrope.com/district/sandbox.html">
+        <meta property="twitter:card" content="summary_large_image">
+
         <script src="http://code.jquery.com/jquery.min.js"></script>
         <link rel="icon" type="image/png" href="/favicon.png"/>
         <link rel="stylesheet" href="/css/main.css">
