Changed twitter card type

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <meta property="og:description" content="A Game about Representation and Redistricting.">
         <meta property="og:image" content="http://polytrope.com/district/res/thumbnail.png">
         <meta property="og:url" content="http://polytrope.com/district/index.html">
-        <meta property="twitter:card" content="summary_large_image">
+        <meta property="twitter:card" content="summary">
 
         <script src="http://code.jquery.com/jquery.min.js"></script>
 
